--- a/eng/pipelines/templates/stages/archetype-java-release-batch.yml
+++ b/eng/pipelines/templates/stages/archetype-java-release-batch.yml
@@ -31,8 +31,7 @@ stages:
   - stage: Signing
     dependsOn: ${{parameters.DependsOn}}
     jobs:
-      - deployment: SignPackage
-        environment: esrp
+      - job: SignPackage
         timeoutInMinutes: 20
         variables:
           - template: /eng/pipelines/templates/variables/globals.yml
@@ -41,62 +40,59 @@ stages:
           name: azsdk-pool-mms-win-2022-general
           image: azsdk-pool-mms-win-2022-1espt
           os: windows
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - checkout: azure-sdk-build-tools
-                  path: azure-sdk-build-tools
-                - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
-                  parameters:
-                    SkipCheckoutNone: true
-                    Repositories:
-                      - Name: Azure/azure-sdk-for-java
-                        Commitish: $(Build.SourceVersion)
-                        WorkingDirectory: $(Pipeline.Workspace)/azure-sdk-for-java
-                - template: /eng/pipelines/templates/steps/download-credscan-suppressions.yml
+        steps:
+          - checkout: azure-sdk-build-tools
+            path: azure-sdk-build-tools
+          - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
+            parameters:
+              SkipCheckoutNone: true
+              Repositories:
+                - Name: Azure/azure-sdk-for-java
+                  Commitish: $(Build.SourceVersion)
+                  WorkingDirectory: $(Pipeline.Workspace)/azure-sdk-for-java
+          - template: /eng/pipelines/templates/steps/download-credscan-suppressions.yml
 
-                - download: current
-                  displayName: 'Download Artifact: ${{parameters.ArtifactName}}'
-                  artifact: ${{parameters.ArtifactName}}
+          - download: current
+            displayName: 'Download Artifact: ${{parameters.ArtifactName}}'
+            artifact: ${{parameters.ArtifactName}}
 
-                - template: tools/java-esrp-signing/java-esrp-signing.yml@azure-sdk-build-tools
-                  parameters:
-                    Artifacts: ${{parameters.Artifacts}}
-                    ArtifactDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}
+          - template: tools/java-esrp-signing/java-esrp-signing.yml@azure-sdk-build-tools
+            parameters:
+              Artifacts: ${{parameters.Artifacts}}
+              ArtifactDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}
 
-                # Publish the ESRP signed directory. This will still be used by the
-                # Dev feed publish.
-                - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-                  parameters:
-                    ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}'
-                    ArtifactName: '${{parameters.ArtifactName}}-signed'
+          # Publish the ESRP signed directory. This will still be used by the
+          # Dev feed publish.
+          - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+            parameters:
+              ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}'
+              ArtifactName: '${{parameters.ArtifactName}}-signed'
 
-                # JRS - Downloading the ESRP signed artifacts
-                - download: current
-                  displayName: 'Download Signed Artifacts'
-                  artifact: ${{parameters.ArtifactName}}-signed
+          # JRS - Downloading the ESRP signed artifacts
+          - download: current
+            displayName: 'Download Signed Artifacts'
+            artifact: ${{parameters.ArtifactName}}-signed
 
-                # gpg-sign and create the flattened directory for ESRP bulk publish
-                # Note: The maven release requires the files to be local GPG signed
-                # Dev feed publishes use the gpg-sign-and-deply to do it in one step
-                - template: tools/gpg/gpg.yml@azure-sdk-build-tools
-                - template: /eng/pipelines/templates/steps/gpg-sign-and-flatten.yml
-                  parameters:
-                    ArtifactDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-signed
-                    OutputDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-gpg-signed
-                    FlattenedESRPDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-flattened
-                # Publish the packages-esrp-gpg-signed, which is the intermediate directory
-                # prior to flattening
-                - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-                  parameters:
-                    ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-gpg-signed'
-                    ArtifactName: '${{parameters.ArtifactName}}-esrp-gpg-signed'
-                # The packages-esrp-flattened will be used for the ESRP publish
-                - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-                  parameters:
-                    ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-flattened'
-                    ArtifactName: '${{parameters.ArtifactName}}-esrp-flattened'
+          # gpg-sign and create the flattened directory for ESRP bulk publish
+          # Note: The maven release requires the files to be local GPG signed
+          # Dev feed publishes use the gpg-sign-and-deply to do it in one step
+          - template: tools/gpg/gpg.yml@azure-sdk-build-tools
+          - template: /eng/pipelines/templates/steps/gpg-sign-and-flatten.yml
+            parameters:
+              ArtifactDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-signed
+              OutputDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-gpg-signed
+              FlattenedESRPDirectory: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-flattened
+          # Publish the packages-esrp-gpg-signed, which is the intermediate directory
+          # prior to flattening
+          - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+            parameters:
+              ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-gpg-signed'
+              ArtifactName: '${{parameters.ArtifactName}}-esrp-gpg-signed'
+          # The packages-esrp-flattened will be used for the ESRP publish
+          - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+            parameters:
+              ArtifactPath: '$(Pipeline.Workspace)/${{parameters.ArtifactName}}-esrp-flattened'
+              ArtifactName: '${{parameters.ArtifactName}}-esrp-flattened'
 
   # # We generate two interdependent stages for each artifact listed in the ci.yml file, creates the release
   # # in GitHub. The Release stage publishes to Maven Central. Both stages require approval since they
