- AZURE_TEST_HTTP_CLIENTS=netty

--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -26,3 +26,4 @@ extends:
     MatrixFilters:
       - JavaTestVersion=^(?!1.8).*
       - TestFromSource=^$|false
+      - AZURE_TEST_HTTP_CLIENTS=netty
