entra id and override the java version

--- a/eng/pipelines/templates/steps/build-and-test.yml
+++ b/eng/pipelines/templates/steps/build-and-test.yml
@@ -125,6 +125,12 @@ steps:
         ${{ insert }}: ${{ parameters.TestEnvVars }}
 
   - ${{ else }}:
+    - pwsh: |
+        $javaTestVersion = "$(JavaTestVersion)".Substring(2)
+        $javaHomeValue = [System.Environment]::GetEnvironmentVariable("JAVA_HOME_$javaTestVersion`_X64")
+        Write-Host "Setting PowerShellJavaHome to '$javaHomeValue'"
+        Write-Host "##vso[task.setvariable variable=PowerShellJavaHome;]$javaHomeValue"
+      displayName: 'Set PowerShellJavaHome'
     - task: Maven@4
       condition: and(succeeded(), ne(variables['TestFromSource'], 'true'))
       ${{ if eq(parameters.TestVersionSupport, 'true') }}:
