--- a/sdk/spring/spring-cloud-azure-actuator-autoconfigure/pom.xml
+++ b/sdk/spring/spring-cloud-azure-actuator-autoconfigure/pom.xml
@@ -90,7 +90,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-messaging-eventhubs</artifactId>
-      <version>5.20.0</version> <!-- {x-version-update;com.azure:azure-messaging-eventhubs;dependency} -->
+      <version>5.21.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-messaging-eventhubs;dependency} -->
       <optional>true</optional>
     </dependency>
     <dependency>
