Reset sources for azure-security-keyvault-keys to the release version 4.9.2.

--- a/sdk/keyvault/azure-security-keyvault-keys/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-keys/resource-config.json
+++ b/sdk/keyvault/azure-security-keyvault-keys/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-keys/resource-config.json
@@ -2,7 +2,7 @@
   "resources": {
     "includes": [
       {
-        "pattern": "azure-security-keyvault-keys.properties"
+        "pattern": "azure-key-vault-keys.properties"
       },
       {
         "pattern": "kvErrorStrings.properties"
