mgmt, deprecate networkanalytics, prepare release (#44351)

--- a/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
+++ b/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
@@ -14,11 +14,11 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-networkanalytics</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-networkanalytics;current} -->
+  <version>1.0.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-networkanalytics;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Network Analytics Management</name>
-  <description>Please note, this package has been deprecated and will no longer be maintained after 03/14/2025.</description>
+  <description>Please note, this package has been deprecated and will no longer be maintained after 03/14/2025. Refer to our deprecation policy (https://aka.ms/azsdk/support-policies) for more details.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
