Add triggeringPaths to their correct ci.yml files and remove the, now defunct, validation-groups.yml

--- a/sdk/clientcore/ci.yml
+++ b/sdk/clientcore/ci.yml
@@ -50,6 +50,8 @@ extends:
         groupId: io.clientcore
         safeName: core
         releaseInBatch: ${{ parameters.release_core }}
+        triggeringPaths:
+        - /sdk/parents/clientcore-parent
       - name: http-okhttp3
         groupId: io.clientcore
         safeName: httpokhttp3
