--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -112,6 +112,10 @@ extends:
         groupId: com.azure
         safeName: azurecore
         releaseInBatch: ${{ parameters.release_azurecore }}
+        triggeringPaths:
+        - /eng
+        - /sdk/parents/azure-sdk-parent
+        - /sdk/parents/azure-client-sdk-parent
       - name: azure-core-amqp
         groupId: com.azure
         safeName: azurecoreamqp
