--- a/sdk/spring/spring-cloud-azure-starter-monitor/ci.yml
+++ b/sdk/spring/spring-cloud-azure-starter-monitor/ci.yml
@@ -38,3 +38,5 @@ extends:
     AdditionalModules:
       - name: spring-cloud-azure-starter-monitor-test
         groupId: com.azure.spring
+    MatrixFilters:
+      - JavaTestVersion=^(?!1.8|1.11).*
