Revert "Removing azure-monitor-query and azure-data-tables from patch releases"
This reverts commit fc6e5183154449fbaa10fc20a66bd3f5d1894616.

--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -20,6 +20,10 @@ extends:
       groupId: com.azure
       safeName: azuresearch
       ServiceDirectory: search
+    - name: azure-data-tables
+      groupId: com.azure
+      safeName: azuredatatables
+      ServiceDirectory: tables
     - name: azure-security-confidentialledger
       groupId: com.azure
       safeName: azuresecurityconfidentialledger
@@ -40,6 +44,10 @@ extends:
       groupId: com.azure
       safeName: azuredataappconfiguration
       ServiceDirectory: appconfiguration
+    - name: azure-monitor-query
+      groupId: com.azure
+      safeName: azuremonitorquery
+      ServiceDirectory: monitor
     - name: azure-ai-translation-text
       groupId: com.azure
       safeName: azureaitranslationtext
