--- a/sdk/devcenter/azure-developer-devcenter/pom.xml
+++ b/sdk/devcenter/azure-developer-devcenter/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-developer-devcenter</artifactId>
-  <version>1.0.6</version> <!-- {x-version-update;com.azure:azure-developer-devcenter;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-developer-devcenter;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for DevCenter Management</name>
@@ -96,7 +96,7 @@
         <dependency>
           <groupId>com.azure</groupId>
           <artifactId>azure-core-http-jdk-httpclient</artifactId>
-          <version>1.0.0-beta.19</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
+          <version>1.0.2</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
           <scope>test</scope>
         </dependency>
       </dependencies>
