--- a/sdk/mixedreality/azure-mixedreality-authentication/pom.xml
+++ b/sdk/mixedreality/azure-mixedreality-authentication/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-mixedreality-authentication</artifactId>
-  <version>1.2.30</version> <!-- {x-version-update;com.azure:azure-mixedreality-authentication;current} -->
+  <version>1.3.0-beta.1</version> <!-- {x-version-update;com.azure:azure-mixedreality-authentication;current} -->
 
   <name>Microsoft Azure SDK for Mixed Reality Authentication</name>
   <description>This package contains Microsoft Azure SDK for Mixed Reality Authentication.</description>
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-okhttp</artifactId>
-      <version>1.12.6</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
+      <version>1.12.9</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
